6726309: Compiler warnings in nio code Reviewed-by: sherman, iris